# diff-traffic-baseline-libroad

./: .gitignore  GIT-VERSION-GEN  Makefile.am  README.md  configure.ac  interval-test.cpp  partition01.hpp  polyline_road.hpp  road-test.cpp  road.hpp  road_rep.hpp
etc/: Makefile.am  circ-len.py  circ.py  edges.xml  integrate-path.wxm  mm.cpp  smooth_poly2d.py  smooth_poly2d_blender.py  smooth_poly3d_blender.py  smooth_polyline.py  types.xml
etc/arc-chop/: .gitignore  Makefile.am  arc-chop.cpp
etc/arc-int/: arc-int.cpp  arc-int.hpp  gauss_legendre.cpp  gauss_legendre.hpp
etc/circ-doc/: .gitignore  circ-doc-figs.py  circ.tex
etc/stitch/: Makefile  stitch.cpp
etc/tex/: road.mtl
libroad/: Makefile.am  arc_road.cpp  arc_road.hpp  geometric.hpp  hilbert.hpp  hwm_draw.cpp  hwm_draw.hpp  hwm_intersection.cpp  hwm_lane.cpp  hwm_network.cpp  hwm_network.hpp  hwm_network_aux.cpp  hwm_network_spatial.cpp  hwm_road.cpp  hwm_texture_gen.cpp  hwm_texture_gen.hpp  hwm_xml_read.cpp  hwm_xml_write.cpp  im_heightfield.hpp  libroad_common.cpp  libroad_common.hpp  osm_draw.cpp  osm_network.cpp  osm_network.hpp  osm_xml_read.cpp  partition01.hpp  polyline_road.cpp  polyline_road.hpp  rtree-impl.hpp  rtree.hpp  sumo_network.cpp  sumo_network.hpp  sumo_xml_read.cpp  svg_helper.cpp  svg_helper.hpp  xml_attributes.hpp  xml_util.hpp
msvc/: .gitignore  libroad.sln  libroad.vcproj
msvc/test/osm-import/: osm-import.vcproj
test/: .gitignore  Makefile.am  arc-road-test.cpp  cairo-network.cpp  displace-polylines.cpp  geometric.hpp  hwm-net-mesh.hpp  hwm-test.cpp  hwm_net_mesh.hpp  im_heightfield.hpp  intersect-test.xml  interval-test.cpp  make-grid.cpp  make-terrain.cpp  mesh-extract-test.cpp  micro.cpp  micro.hpp  osm-import.cpp  osm-test.cpp  qaatsi-grid.cpp  read-scene.cpp  road-test.cpp  road-texture-test.cpp  road.mtl  sumo-test.cpp  sumo-xml-to-hwm.cpp  svg-write.cpp  texture-gen.hpp  texture_gen.hpp  view-network.cpp  view-osm.cpp  visual_geometric.hpp
